read PLEASE_READ.txt

--- a/pages/dock/community/community.html
+++ b/pages/dock/community/community.html
@@ -21,7 +21,7 @@
 		<main class="container">
 			<section class="featured-story">
 				<img
-					src="https://images.unsplash.com/photo-1599423300746-b625ed849930?q=80&w=2574&auto=format&fit=crop"
+					src="../../assets/images/community/artisan1.png"
 					alt="Rajasthani artisan"
 					class="featured-image"
 				/>
@@ -42,7 +42,7 @@
 				<div class="profiles">
 					<div class="artisan-card">
 						<img
-							src="https://images.unsplash.com/photo-1605206754374-c100de47454e?q=80&w=2574&auto=format&fit=crop"
+							src="../../assets/community/artisan2.png"
 							alt="Portrait of Ramesh Kumar"
 						/>
 						<h3>Ramesh Kumar</h3>
@@ -55,7 +55,7 @@
 					</div>
 					<div class="artisan-card">
 						<img
-							src="https://images.unsplash.com/photo-1620756236232-0a6a2a1d92f4?q=80&w=2574&auto=format&fit=crop"
+							src="../../assets/community/artisan3.png"
 							alt="Portrait of Sita Devi"
 						/>
 						<h3>Sita Devi</h3>
@@ -68,7 +68,7 @@
 					</div>
 					<div class="artisan-card">
 						<img
-							src="https://images.unsplash.com/photo-1580757468133-35e2216a3331?q=80&w=2574&auto=format&fit=crop"
+							src="../../assets/community/artisan4.png"
 							alt="Portrait of Lakshmi Bai"
 						/>
 						<h3>Lakshmi Bai</h3>
