read PLEASE_READ.txt

--- a/pages/dock/community/community.html
+++ b/pages/dock/community/community.html
@@ -4,11 +4,11 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Community & Stories - Digital Heritage Bazaar</title>
-		<!-- CORRECTED: Links to its own local stylesheet -->
+		<!-- This link is correct -->
 		<link rel="stylesheet" href="community.css" />
 	</head>
 	<body>
-		<!-- Added a back button for navigation -->
+		<!-- This link is correct -->
 		<a href="../../../index.html#explore" class="back-btn"
 			>&larr; Back to Map</a
 		>
@@ -20,8 +20,9 @@
 
 		<main class="container">
 			<section class="featured-story">
+				<!-- CORRECTED PATH: ../../../assets/images/community/... -->
 				<img
-					src="../../assets/images/community/artisan1.png"
+					src="../../../assets/images/community/artisan1.png"
 					alt="Rajasthani artisan"
 					class="featured-image"
 				/>
@@ -41,8 +42,9 @@
 				<h2 class="section-title">Meet the Artisans</h2>
 				<div class="profiles">
 					<div class="artisan-card">
+						<!-- CORRECTED PATH: ../../../assets/images/community/... -->
 						<img
-							src="../../assets/community/artisan2.png"
+							src="../../../assets/images/community/artisan2.png"
 							alt="Portrait of Ramesh Kumar"
 						/>
 						<h3>Ramesh Kumar</h3>
@@ -54,8 +56,9 @@
 						<a href="#" class="profile-link">View Profile</a>
 					</div>
 					<div class="artisan-card">
+						<!-- CORRECTED PATH: ../../../assets/images/community/... -->
 						<img
-							src="../../assets/community/artisan3.png"
+							src="../../../assets/images/community/artisan3.png"
 							alt="Portrait of Sita Devi"
 						/>
 						<h3>Sita Devi</h3>
@@ -67,8 +70,9 @@
 						<a href="#" class="profile-link">View Profile</a>
 					</div>
 					<div class="artisan-card">
+						<!-- CORRECTED PATH: ../../../assets/images/community/... -->
 						<img
-							src="../../assets/community/artisan4.png"
+							src="../../../assets/images/community/artisan4.png"
 							alt="Portrait of Lakshmi Bai"
 						/>
 						<h3>Lakshmi Bai</h3>
@@ -83,7 +87,7 @@
 			</section>
 		</main>
 
-		<!-- CORRECTED: Links to its own local script -->
+		<!-- This link is correct -->
 		<script src="community.js"></script>
 	</body>
 </html>
