Final Version Sent to Review, No readme (Yet)

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Digital Heritage Bazaar</title>
+		<title>Digital Heritage Hub</title>
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
@@ -57,12 +57,36 @@
 						<span
 							>Just In: Rajasthani Blue Pottery workshop announced! • Discover
 							the lost art of Bidriware from Karnataka • Fun Fact: Madhubani art
-							uses twigs, fingers, and matchsticks! •
+							uses twigs, fingers, and matchsticks! • Experience the ancient art
+							of Madhubani painting alongside contemporary techniques • Learn
+							traditional block printing and modern fabric design • Explore the
+							intricate world of Bidriware and metal craft artistry • Discover
+							Rajasthani pottery and pottery-making traditions from across India
+							• Dive into the world of Warli tribal art and geometric modern
+							designs • Master the detailed strokes of Pattachitra painting with
+							digital illustration techniques • Experience Kalamkari art
+							alongside eco-friendly dyeing methods • Uncover the beauty of
+							Channapatna toys with toy-making workshops for kids • Take a
+							journey through Kerala’s murals and contemporary street art •
+							Weave stories with Himachal shawls and contemporary weaving
+							techniques •
 						</span>
 						<span
 							>Just In: Rajasthani Blue Pottery workshop announced! • Discover
 							the lost art of Bidriware from Karnataka • Fun Fact: Madhubani art
-							uses twigs, fingers, and matchsticks! •
+							uses twigs, fingers, and matchsticks! • Experience the ancient art
+							of Madhubani painting alongside contemporary techniques • Learn
+							traditional block printing and modern fabric design • Explore the
+							intricate world of Bidriware and metal craft artistry • Discover
+							Rajasthani pottery and pottery-making traditions from across India
+							• Dive into the world of Warli tribal art and geometric modern
+							designs • Master the detailed strokes of Pattachitra painting with
+							digital illustration techniques • Experience Kalamkari art
+							alongside eco-friendly dyeing methods • Uncover the beauty of
+							Channapatna toys with toy-making workshops for kids • Take a
+							journey through Kerala’s murals and contemporary street art •
+							Weave stories with Himachal shawls and contemporary weaving
+							techniques •
 						</span>
 					</div>
 				</div>
@@ -79,6 +103,9 @@
 							<img src="assets/images/logo.png" alt="Heritage Hub Menu" />
 						</button>
 						<div class="fab-options">
+							<a href="pages/checkout/checkout.html" class="checkout-link"
+								>Checkout</a
+							>
 							<a href="#">Settings</a><a href="#">Profile</a
 							><a href="#">Logout</a>
 						</div>
@@ -101,7 +128,7 @@
 				</button>
 			</div>
 
-			<!-- Other Views -->
+			<!-- Other Core Views -->
 			<div id="artisan-story-page" class="view">
 				<button class="back-btn" data-navigate-to="explore-page">
 					&larr; Back to Map
@@ -114,30 +141,6 @@
 				</button>
 				<h1>Madhubani Paintings</h1>
 				<div class="product-grid"></div>
-			</div>
-			<div id="cart-page" class="view">
-				<button class="back-btn" data-navigate-to="product-page">
-					&larr; Continue Shopping
-				</button>
-				<h1>Your Cart</h1>
-				<p>You are supporting 3 artisans today.</p>
-				<button class="cta-button" data-navigate-to="checkout-page">
-					Proceed to Checkout
-				</button>
-			</div>
-			<div id="checkout-page" class="view">
-				<button class="back-btn" data-navigate-to="cart-page">
-					&larr; Back to Cart
-				</button>
-				<h1>Checkout</h1>
-			</div>
-			<div id="thank-you-page" class="view">
-				🎉
-				<h1>Thank You for Supporting Artisans!</h1>
-				<video src="assets/videos/dhanyavaad.mp4" autoplay loop muted></video
-				><button class="cta-button" data-navigate-to="explore-page">
-					Explore More
-				</button>
 			</div>
 			<div id="passport-page" class="view">
 				<button class="back-btn" data-navigate-to="explore-page">
@@ -157,6 +160,8 @@
 				</button>
 				<h1>Our Fair Trade Promise</h1>
 			</div>
+
+			<!-- THE CART, CHECKOUT, and THANK YOU DIVS HAVE BEEN REMOVED -->
 		</main>
 		<script src="script.js"></script>
 	</body>
