--- a/pages/rajasthan/rajasthan.html
+++ b/pages/rajasthan/rajasthan.html
@@ -4,19 +4,12 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>The Heritage of Rajasthan - Digital Heritage Bazaar</title>
-		<!-- Links to its own local stylesheet -->
 		<link rel="stylesheet" href="rajasthan.css" />
 	</head>
 	<body>
-		<!-- This tooltip is for the interactive map -->
 		<div id="tooltip"></div>
-
 		<div class="rajasthan-container">
-			<!-- The back button path is corrected to go up two directories -->
-
 			<a href="../../index.html#explore" class="back-btn">&larr; Back to Map</a>
-
-			<!-- Hero Section with a background image -->
 			<header class="hero-section">
 				<div class="hero-text">
 					<h1>Rajasthan</h1>
@@ -25,22 +18,19 @@
 			</header>
 
 			<main class="content-wrapper">
-				<!-- Introduction -->
 				<section class="intro-section">
 					<h2>A Legacy Forged in Color</h2>
 					<p>
 						Rajasthan’s heritage is a vibrant tapestry woven with stories of
-						royalty, desert landscapes, and unparalleled artistry. Every craft,
-						from the luminous Blue Pottery of Jaipur to the intricate Meenakari
-						jewelry, is a living testament to a legacy passed down through
-						generations.
+						royalty, desert landscapes, and unparalleled artistry. Every craft
+						is a living testament to a legacy passed down through generations.
 					</p>
 				</section>
 
-				<!-- Showcase of Key Crafts -->
 				<section class="craft-showcase">
 					<h3>Signature Art Forms</h3>
 					<div class="craft-grid">
+						<!-- Card 1 -->
 						<div class="craft-card">
 							<img
 								src="../../assets/images/rajasthan/image1.png"
@@ -51,7 +41,19 @@
 								A unique Turko-Persian art form using a special quartz dough,
 								famed for its brilliant cobalt blue dye.
 							</p>
+							<!-- ADDED BUTTON CONTAINER AND BUTTON -->
+							<div class="card-actions">
+								<button
+									class="add-to-cart-btn"
+									data-product-id="RBP-001"
+									data-product-name="Blue Pottery Vase"
+									data-product-price="49.99"
+								>
+									Add to Cart
+								</button>
+							</div>
 						</div>
+						<!-- Card 2 -->
 						<div class="craft-card">
 							<img
 								src="../../assets/images/rajasthan/image2.png"
@@ -62,7 +64,19 @@
 								An ancient tie-dye technique creating intricate patterns,
 								symbolizing the vibrant culture of the region.
 							</p>
+							<!-- ADDED BUTTON CONTAINER AND BUTTON -->
+							<div class="card-actions">
+								<button
+									class="add-to-cart-btn"
+									data-product-id="RBD-002"
+									data-product-name="Bandhani Scarf"
+									data-product-price="29.99"
+								>
+									Add to Cart
+								</button>
+							</div>
 						</div>
+						<!-- Card 3 -->
 						<div class="craft-card">
 							<img
 								src="../../assets/images/rajasthan/image3.png"
@@ -73,20 +87,27 @@
 								The exquisite art of enameling precious metals with vibrant
 								colors, traditionally used in royal jewelry.
 							</p>
+							<!-- ADDED BUTTON CONTAINER AND BUTTON -->
+							<div class="card-actions">
+								<button
+									class="add-to-cart-btn"
+									data-product-id="RMK-003"
+									data-product-name="Meenakari Earrings"
+									data-product-price="79.99"
+								>
+									Add to Cart
+								</button>
+							</div>
 						</div>
 					</div>
 				</section>
 
-				<!-- Interactive Map Section -->
 				<section class="interactive-section">
 					<h3>Explore the Craft Map of Rajasthan</h3>
 					<p>Hover over a city to discover its famous artisanal heritage.</p>
-					<div id="rajasthan-map-container">
-						<!-- The Rajasthan SVG will be loaded here by rajasthan.js -->
-					</div>
+					<div id="rajasthan-map-container"></div>
 				</section>
 
-				<!-- Artisan Spotlight -->
 				<section class="artisan-spotlight">
 					<img
 						src="../../assets/images/rajasthan/artisan1.png"
@@ -104,8 +125,6 @@
 				</section>
 			</main>
 		</div>
-
-		<!-- Links to its own local script file -->
 		<script src="rajasthan.js"></script>
 	</body>
 </html>
